--- a/src/app/login/login-component/login.component.html
+++ b/src/app/login/login-component/login.component.html
@@ -1,3 +1,8 @@
 <div id="allHeader">
-  <div id="header"></div>
+  <div id="header">
+    <img id="logo" src="../../../assets/img/logo.jpg"/><span id="loginNowText">欢迎登录</span>
+    <div id="helpDiv">
+      <a href="#">帮助</a><a href="#">注册</a>
+    </div>
+  </div>
 </div>
