--- a/src/app/login/login-component/login.component.html
+++ b/src/app/login/login-component/login.component.html
@@ -16,6 +16,7 @@
           <form>
             <input class="form-control" name="account" [(ngModel)]="userModel.account" placeholder="请输入手机号、邮箱">
             <input class="form-control" name="account" [(ngModel)]="userModel.password" placeholder="请输入密码">
+            <p-checkbox ></p-checkbox>
             <input class="btn btn-primary" value="登录" type="submit">
           </form>
         </div>
