--- a/src/app/login/login-component/login.component.css
+++ b/src/app/login/login-component/login.component.css
@@ -15,10 +15,11 @@
   font-size: 23px;
   line-height: 50px;
   padding-left: 20px;
+  margin-top: 10px;
 }
 #helpDiv{
   float: right;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 #helpDiv a{
@@ -70,5 +71,54 @@
 
 .form-control{
   width: 260px;
+  margin-top: 20px;
+}
+#rememberText{
+  font-size: 12px;
+  color: rgb(150,150,150);
+  display: inline-block;
+  margin-top: 15px;
+}
+#loginBtn{
+  margin-top: 20px;
+}
+#losePass{
+  font-size: 12px;
+  cursor: pointer;
+  float: right;
+  margin-top: 15px;
+}
+#otherLogin{
+  margin-top: 20px;
+  margin-left: 30px;
+}
+#loginInfo{
+  height: 10px!important;
+  margin: auto;
+  margin-top: 10px;
+  width: 90%;
+  line-height: 5px;
+  text-align: center;
+}
+.modal-title{
+  color: red;
+}
+#registerForm .form-control:not(#identify){
+  width: 300px;
+  display: inline-block;
+  height: 30px;
+}
+#identify{
+  display: inline-block;
+  height: 30px;
+  width: 100px;
+}
+#identifyImg{
+  margin-left: 15px;
+  margin-right: 10px;
+}
+#registerForm{
+  width: 500px;
+  margin: auto;
 
 }
