--- a/src/app/home/home-component/home.component.html
+++ b/src/app/home/home-component/home.component.html
@@ -1,3 +1,33 @@
-<div id="header"  [@flyInOut]="inactive">
-aaaaaaaaaaaaaaa
+<div   [@flyInOut]="inactive">
+  <!--头部开始-->
+  <div id="allHeader">
+    <div id="headerLeft"><img id="sellerLogo" src="../../../assets/img/sellerLogo.png"/>商家后台管理</div>
+    <div id="headerRight">
+      <div id="headerTools">
+        <input class="simpleInput" placeholder="search...">
+        <img id="searchImg" class="toolImg" src="../../../assets/img/search.png"/>
+        <img class="toolImg" src="../../../assets/img/tongzhi.png"/>
+        <img class="toolImg" src="../../../assets/img/setting.png"/>
+      </div>
+    </div>
+  </div>
+  <!--头部结束-->
+
+    <!--导航菜单开始-->
+    <div id="allMenuDiv">
+      <div id="userInfo">
+        <img src="../../../assets/img/1E0EF200099D6D6C.jpg"/>
+        <p id="nickName">上官青青</p>
+      </div>
+      <ul>
+        <li>销售总览</li>
+        <li>销售总览</li>
+        <li>销售总览</li>
+        <li>销售总览</li>
+      </ul>
+    </div>
+    <!--导航菜单结束-->
+    <div id="allContent">
+      11111111111<br>1111111111111111111111111111<br>111111111111<br>11111111111111<br>111111111111111<br>
+    </div>
 </div>
