--- a/src/app/home/home-component/home.component.css
+++ b/src/app/home/home-component/home.component.css
@@ -1,4 +1,98 @@
-#header{
-height: 1000px;
-  background: gray;
+#allHeader{
+  height:60px ;
+  background: rgb(96,125,139);
+  overflow: hidden;
+  box-shadow: 0 0 8px gray;
+  position: fixed;
+  width: 100%;
+}
+#headerLeft{
+  background: rgb(55,71,79);
+  color: white;
+  font-size: 20px;
+  line-height: 54px;
+  text-align: center;
+  float: left;
+  width: 230px;
+  border:solid rgb(55,71,79);
+  box-shadow: 0 0 10px rgb(55,71,79);
+}
+#sellerLogo{
+  width: 50px;
+  margin-right: 10px;
+}
+#headerRight{
+  height: 65px;
+  float: right;
+  width: 600px;
+}
+/*去除默认input样式*/
+.simpleInput{
+  background: rgb(96,125,139);
+  border: none;
+  border-bottom: solid white 1px;
+  border-radius: 0;
+  width: 150px;
+  color: white;outline: none;
+}
+
+.simpleInput:focus{
+  border: none;
+  border-bottom: solid white 1px;
+}
+
+input::-webkit-input-placeholder {
+  color: white;
+}
+
+#headerTools{
+  float: right;
+  margin-top: 5px;
+  width: 350px;
+}
+#headerTools input{
+  margin-top: 20px;
+  display: inline-block;
+}
+#searchImg{
+  margin-bottom: 5px;
+}
+.toolImg{
+  width: 30px;
+  margin-left: 20px;
+}
+
+#allMenuDiv{
+  top:0;
+  width: 230px;
+  height: 100%;
+  z-index: -200;
+  padding-top: 60px;
+  background: white;
+  box-shadow: 0 0 10px gray;
+  position: fixed;
+}
+#allContent{
+  height: 1000px;
+  width: 100%;
+  top: 60px;
+  z-index: -201;
+  padding-left: 230px;
+  position: absolute;
+  background: white;
+}
+#userInfo{
+  height: 135px;
+  box-shadow: 0 0 3px gray;
+  background-image: url("../../../assets/img/infoBg.jpg");
+  text-align: center;
+}
+#userInfo img{
+  width: 64px;
+  border-radius: 32px;
+  margin-top: 30px;
+}
+#nickName{
+  margin-top: 10px;
+  font-weight: bold;
 }
