--- a/src/app/add-goods/add-goods-component/add-goods.component.html
+++ b/src/app/add-goods/add-goods-component/add-goods.component.html
@@ -1,20 +1,19 @@
 <div id="addGoodsDiv" [@flyInOut]="inactive">
   <div id="allAddGoods" [ngClass]="{'preGoods':preAble}">
+      <p-growl [(value)]="addGoodsMessage" [style]="{'left':'450px','top':'80px','position':'fixed'}"></p-growl>
     <div id="addGoodsHeader">
       <img id="addGoodsLogo" src="../../../assets/img/newGoods.jpg"/>
       <span class="addGoodsTitle">添加菜品信息</span>
-
       <p id="pre-inputSwitch"><p-toggleButton onLabel="关闭菜品预览" offLabel="打开菜品预览"  [(ngModel)]="preAble"></p-toggleButton></p>
-
     </div>
-    <form id="addGoodsForm" #addGoodsForm="ngForm">
+    <form id="addGoodsForm" #addGoodsForm="ngForm" (ngSubmit)="doAddGoods()">
       <div class="goodEachInfo">
         <label for="goodsName">菜品名称</label>
-        <input id="goodsName" name="goodsName" type="text" class="form-control" [(ngModel)]="addGoodsModel.goodsName">
+        <input id="goodsName" required name="goodsName" type="text" class="form-control" [(ngModel)]="addGoodsModel.goodsName">
       </div>
       <div class="goodEachInfo">
         <label for="goodsPrice">菜品单价</label>
-        <input id="goodsPrice" name="goodsPrice" [(ngModel)]="addGoodsModel.goodsPrice" type="number" class="form-control">
+        <input id="goodsPrice" required name="goodsPrice" [(ngModel)]="addGoodsModel.goodsPrice" type="number" class="form-control">
       </div>
       <div class="goodEachInfo">
         <label for="goodsRebate">菜品折扣</label>
@@ -23,11 +22,10 @@
       <div class="goodEachInfo">
         <label for="goodsDesc">菜品类型</label>
         <p-dropdown required id="type" name="type" [(ngModel)]="addGoodsModel.goodsType" [options]="goodsTypes"   [style]="{'line-height':'26px','width':'100%','height':'35px','display':'block'}"></p-dropdown>
-
       </div>
       <div class="goodEachInfo">
         <label>菜品图片</label>
-        <p-fileUpload chooseLabel="选择图片" uploadLabel="确认上传" cancelLabel="取消上传" (onUpload)="doUploadGoodsImg($event)" id="" name="goodsImgs" multiple="multiple" url="/uploadGoodsImg">
+        <p-fileUpload chooseLabel="选择图片" class="ui-fileupload-buttonbar" uploadLabel="确认上传" cancelLabel="取消上传" (onSelect)="doSelectedGoodsImgs($event)" (onUpload)="doUploadGoodsImg($event)" id="" name="files" multiple="multiple" url="/uploadGoodsImg">
         </p-fileUpload>
       </div>
       <div class="goodEachInfo">
@@ -36,7 +34,7 @@
 
       </div>
       <div class="goodEachInfo">
-        <input type="submit" class="btn btn-primary"  value="预览菜品信息">
+        <input type="submit" [disabled]="!addGoodsForm.valid" class="btn btn-primary"  value="确认上架菜品">
         <input type="reset" class="btn btn-default" value="重置菜品信息">
       </div>
     </form>
@@ -44,27 +42,37 @@
   </div>
   <div id="preAddGoods" *ngIf="preAble">
     <h4 id="preGoodsText">预览菜品</h4>
-    <carousel>
-      <slide *ngFor="let img of addGoodsModel.goodsImg">
-        <div  class="preGoodsImgDiv"><img  [src]="img" alt="First slide"></div>
-      </slide>
-    </carousel>
+    <div id="preGoodsImgDiv">
+      <carousel>
+        <slide *ngFor="let img of goodsImgUrl" [style]="{'height':'360px','width':'360px'}">
+         <img [src]="img" alt="First slide">
+          <div class="carousel-caption">
+            <h3>{{addGoodsModel.goodsName}}</h3>
+            <p>{{addGoodsModel.goodsType?addGoodsModel.goodsType.label:none}}，{{addGoodsModel.goodsPrice|currency}}</p>
+          </div>
+        </slide>
+      </carousel>
+    </div>
     <table class="table">
       <tr>
-        <td width="100px">菜品名称</td>
+        <td width="100px">菜品名称:</td>
         <td>{{addGoodsModel.goodsName}}</td>
       </tr>
       <tr>
-        <td>菜品单价</td>
-        <td>{{addGoodsModel.goodsPrice}}</td>
+        <td>菜品单价:</td>
+        <td>{{addGoodsModel.goodsPrice|currency}}</td>
       </tr>
       <tr>
-        <td>菜品折扣</td>
+        <td>菜品折扣:</td>
         <td>{{addGoodsModel.rebate?addGoodsModel.rebate.label:none}}</td>
       </tr>
       <tr>
-        <td>菜品类型</td>
+        <td>菜品类型:</td>
         <td>{{addGoodsModel.goodsType?addGoodsModel.goodsType.label:none}}</td>
+      </tr>
+      <tr>
+        <td>菜品描述:</td>
+        <td><div [innerHTML]="addGoodsModel.goodsDescription"></div></td>
       </tr>
     </table>
   </div>
