--- a/src/app/update-seller/update-seller-info/update-seller-info.component.html
+++ b/src/app/update-seller/update-seller-info/update-seller-info.component.html
@@ -1,28 +1,28 @@
 <div id="allUpdate" [@flyInOut]="inactive">
   <h3>修改资料</h3>
-  <form action="">
+  <form #updateForm="ngForm" (ngSubmit)="doUpdateInfo()">
     <div class="eachInfo">
       <label for="nickName">昵称</label>
-      <input type="text" name="nickName" id="nickName" class="form-control">
+      <input type="text" required name="nickName" [(ngModel)]="sellerAndShopModel.sellerName" id="nickName" class="form-control">
     </div>
     <div class="eachInfo">
       <label for="password">密码</label>
-      <input type="text" name="password" id="password" class="form-control">
+      <input type="password" required pattern="\w{6,9}" name="password" [(ngModel)]="sellerAndShopModel.sellerPassword" id="password" class="form-control">
     </div>
     <div class="eachInfo">
       <label for="shopName">店铺名称</label>
-      <input type="text" name="shopName" id="shopName" class="form-control">
+      <input type="text" required name="shopName" [(ngModel)]="sellerAndShopModel.shopName" id="shopName" class="form-control">
     </div>
     <div class="eachInfo">
       <label>店铺照片</label>
-      <p-fileUpload chooseLabel="选择图片"  uploadLabel="确认上传" cancelLabel="取消上传"  id="" name="files"  url="/uploadGoodsImg"></p-fileUpload>
+      <p-fileUpload (onUpload)="doUploadShopImg($event)" chooseLabel="选择图片"  uploadLabel="确认上传" cancelLabel="取消上传"  id="" name="files"  url="/uploadGoodsImg"></p-fileUpload>
     </div>
     <div class="eachInfo">
       <label>店铺公告</label>
-      <p-editor id="shopNotice" name="shopNotice"   [style]="{'height':'320px','width':'100%'}"></p-editor>
+      <p-editor id="shopNotice" [(ngModel)]="sellerAndShopModel.shopNotice" name="shopNotice"   [style]="{'height':'320px','width':'100%'}"></p-editor>
     </div>
     <div class="eachInfo">
-      <input type="submit" value="保存资料" class="btn btn-primary">
+      <input type="submit" [disabled]="!updateForm.valid" value="保存资料" class="btn btn-primary">
     </div>
   </form>
 </div>
